force-app/main/default/objects/Contact/fields/Media_Permission_All_2019__c.field-meta.xml
<CustomField>
    <fullName>Media_Permission_All_2019__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I allow photos/video to be shared by Camp Quality in all the below ways</inlineHelpText>
    <label>Image Opt In Permission All</label>
    <type>Checkbox</type>
</CustomField>