force-app/main/default/objects/Contact/fields/Media_Permission_Photo_Share__c.field-meta.xml
<CustomField>
    <fullName>Media_Permission_Photo_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media Permission Photo Share</label>
    <type>Checkbox</type>
</CustomField>