force-app/main/default/objects/Contact/fields/Motocyc_emailpref__c.field-meta.xml
<CustomField>
    <fullName>Motocyc_emailpref__c</fullName>
    <label>Motocyc_emailpref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opted Out</fullName>
            </value>
            <value>
                <fullName>Opted In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>