force-app/main/default/objects/Contact/fields/Mum_s_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mum_s_Mobile__c</fullName>
    <label>Mum&apos;s Mobile</label>
    <type>Phone</type>
</CustomField>