force-app/main/default/objects/Contact/fields/Mum_s_Work__c.field-meta.xml
<CustomField>
    <fullName>Mum_s_Work__c</fullName>
    <label>Mum&apos;s Work</label>
    <type>Phone</type>
</CustomField>