force-app/main/default/objects/Contact/fields/National_eCommunication_List__c.field-meta.xml
<CustomField>
    <fullName>National_eCommunication_List__c</fullName>
    <label>National eCommunication List - My Kidnes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Duplicate Email</fullName>
            </value>
            <value>
                <fullName>Invalid Email</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>TBC</fullName>
                <label>No Email</label>
            </value>
            <value>
                <fullName>Suppressed - Corporate Partners Newsletter</fullName>
            </value>
            <value>
                <fullName>Hard Bounce</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>