force-app/main/default/objects/Contact/fields/New_Supporter_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Supporter_ID__c</fullName>
    <description>New Supporter ID number, based of the auto populating field</description>
    <formula>Supporter_ID_Auto_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Supporter ID</label>
    <type>Text</type>
</CustomField>