force-app/main/default/objects/Contact/fields/No_Of_Age_Camp_Child__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Age_Camp_Child__c</fullName>
    <inlineHelpText>This is a roll up of the number of age camps attended by a child.</inlineHelpText>
    <label>No Of Age Camp Child</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>