force-app/main/default/objects/Contact/fields/No_Of_Courses__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Courses__c</fullName>
    <label>No Of Courses</label>
    <summaryForeignKey>Volunteer_Course__c.Volunteer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>