force-app/main/default/objects/Contact/fields/No_Valid_Address__c.field-meta.xml
<CustomField>
    <fullName>No_Valid_Address__c</fullName>
    <formula>OR(

  ISBLANK(MailingState),

  ISBLANK(MailingStreet),

  ISBLANK(MailingCity),

  ISBLANK(MailingPostalCode), RTS__c=True

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Valid Address</label>
    <type>Checkbox</type>
</CustomField>