force-app/main/default/objects/Contact/fields/Otp__c.field-meta.xml
<CustomField>
    <fullName>Otp__c</fullName>
    <label>Email Otp</label>
    <length>6</length>
    <type>Text</type>
</CustomField>