force-app/main/default/objects/Contact/fields/Payment_txns_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Payment_txns_last_12_months__c</fullName>
    <label>Payment txns last 12 months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>