force-app/main/default/objects/Contact/fields/Physical_Challenges_EmailPref__c.field-meta.xml
<CustomField>
    <fullName>Physical_Challenges_EmailPref__c</fullName>
    <description>Big Walk, Big Ride, style campaign email preferences</description>
    <label>Physical_Challenges_EmailPref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Preference_Centre</valueSetName>
    </valueSet>
</CustomField>