force-app/main/default/objects/Contact/fields/Portal_Access_Error__c.field-meta.xml
<CustomField>
    <fullName>Portal_Access_Error__c</fullName>
    <label>Portal Access Error</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>