force-app/main/default/objects/Contact/fields/Portal_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Portal_Access_Type__c</fullName>
    <label>Portal Access Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family Portal</fullName>
            </value>
            <value>
                <fullName>Volunteer Portal</fullName>
            </value>
            <value>
                <fullName>Corporate Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>