force-app/main/default/objects/Contact/fields/Power_of_One__c.field-meta.xml
<CustomField>
    <fullName>Power_of_One__c</fullName>
    <description>DO NOT DELETE. Essential for reporting. see https://trailblazers.salesforce.com/_ui/core/chatter/groups/GroupProfilePage?g=0F9300000001pFV&amp;fId=0D53000001GwrJW</description>
    <formula>1</formula>
    <label>Power of One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>