force-app/main/default/objects/Contact/fields/Preferred_Event_Locations__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Event_Locations__c</fullName>
    <label>Preferred Event Locations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Event_Locations</valueSetName>
    </valueSet>
</CustomField>