force-app/main/default/objects/Contact/fields/Prospect_Id__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Id__c</fullName>
    <formula>MID( pi__url__c , FIND(&apos;=&apos;, pi__url__c ) + 1, LEN(pi__url__c ) - FIND(&apos;=&apos;, pi__url__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Id</label>
    <type>Text</type>
</CustomField>