force-app/main/default/objects/Contact/fields/PSP_Last_Show__c.field-meta.xml
<CustomField>
    <fullName>PSP_Last_Show__c</fullName>
    <label>PSP Last Show</label>
    <summarizedField>PSP_Show_Attendee__c.Show_Date2__c</summarizedField>
    <summaryForeignKey>PSP_Show_Attendee__c.Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>