force-app/main/default/objects/Contact/fields/Puppet_Show_Count__c.field-meta.xml
<CustomField>
    <fullName>Puppet_Show_Count__c</fullName>
    <label>Puppet Show Count</label>
    <summaryForeignKey>PSP_Show_Attendee__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>