force-app/main/default/objects/Contact/fields/Receive_Birthday_Email__c.field-meta.xml
<CustomField>
    <fullName>Receive_Birthday_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Automatically checked on Contact Record.</description>
    <inlineHelpText>Uncheck this box to opt out of receiving birthday cards or emails</inlineHelpText>
    <label>Receive Birthday Email</label>
    <type>Checkbox</type>
</CustomField>