force-app/main/default/objects/Contact/fields/Recurring_Donation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donation_Start_Date__c</fullName>
    <description>The date the contact first had a recurring donation created</description>
    <label>Recurring Donation Start Date</label>
    <type>Date</type>
</CustomField>