force-app/main/default/objects/Contact/fields/Recurring_Donor_Status__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Donor_Status__c</fullName>
    <description>This field is automatically updated when updates are made to the value in the Contact</description>
    <inlineHelpText>This is automatically updated based on an action in the Contact record (Suspended, Suspended - Max Tries or Cancelled).</inlineHelpText>
    <label>Recurring Donor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>