force-app/main/default/objects/Contact/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACT - Albury</fullName>
            </value>
            <value>
                <fullName>ACT - Cowra</fullName>
            </value>
            <value>
                <fullName>ACT - Dubbo</fullName>
            </value>
            <value>
                <fullName>ACT - Forbes/Parkes</fullName>
            </value>
            <value>
                <fullName>ACT - Local</fullName>
            </value>
            <value>
                <fullName>ACT - Orange</fullName>
            </value>
            <value>
                <fullName>ACT - Wagga Wagga</fullName>
            </value>
            <value>
                <fullName>ACT - Young</fullName>
            </value>
            <value>
                <fullName>CQLD - Gladstone</fullName>
            </value>
            <value>
                <fullName>CQLD - Rockhampton</fullName>
            </value>
            <value>
                <fullName>CQLD - Wide Bay</fullName>
            </value>
            <value>
                <fullName>ILLA - Far South Coast</fullName>
            </value>
            <value>
                <fullName>ILLA - Local</fullName>
            </value>
            <value>
                <fullName>ILLA  - Out of Area</fullName>
            </value>
            <value>
                <fullName>ILLA  - Shoalhaven</fullName>
            </value>
            <value>
                <fullName>ILLA - Southern Highlands</fullName>
            </value>
            <value>
                <fullName>NCL-Central Coast</fullName>
            </value>
            <value>
                <fullName>NCL-Central West</fullName>
            </value>
            <value>
                <fullName>NCL-Great Lakes</fullName>
            </value>
            <value>
                <fullName>NCL-Hunter</fullName>
            </value>
            <value>
                <fullName>NCL-Manning</fullName>
            </value>
            <value>
                <fullName>NCL-Newcastle</fullName>
            </value>
            <value>
                <fullName>NNSW - Armidale</fullName>
            </value>
            <value>
                <fullName>NNSW - Byron/Ballina</fullName>
            </value>
            <value>
                <fullName>NNSW - Coffs Harbour</fullName>
            </value>
            <value>
                <fullName>NNSW - Lismore</fullName>
            </value>
            <value>
                <fullName>NNSW - Other</fullName>
            </value>
            <value>
                <fullName>NNSW - Port Macquarie</fullName>
            </value>
            <value>
                <fullName>NNSW - Tamworth</fullName>
            </value>
            <value>
                <fullName>NNSW - Tweed Heads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>