force-app/main/default/objects/Contact/fields/Regionv2__c.field-meta.xml
<CustomField>
    <fullName>Regionv2__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regions</valueSetName>
    </valueSet>
</CustomField>