force-app/main/default/objects/Contact/fields/Regular_Giver__c.field-meta.xml
<CustomField>
    <fullName>Regular_Giver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the contact has an active recurring donation</description>
    <label>Regular Giver</label>
    <type>Checkbox</type>
</CustomField>