force-app/main/default/objects/Contact/fields/Regular_Giving_EmailPref__c.field-meta.xml
<CustomField>
    <fullName>Regular_Giving_EmailPref__c</fullName>
    <label>Regular_Giving_EmailPref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Preference_Centre</valueSetName>
    </valueSet>
</CustomField>