force-app/main/default/objects/Contact/fields/Relapsed_Date__c.field-meta.xml
<CustomField>
    <fullName>Relapsed_Date__c</fullName>
    <label>Relapsed Date</label>
    <type>Date</type>
</CustomField>