force-app/main/default/objects/Contact/fields/Reporting_Family_Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Family_Member_Type__c</fullName>
    <formula>if (text(Family_Member_Type__c) = &apos;&apos;, &apos;&apos;,

 if(  isblank(Birthdate) , &apos;Parent/Guardian&apos;,
   if (Year_Age__c &lt; 14, if (  text(Family_Member_Type__c) = &apos;Patient&apos;, &apos;Patient&apos;, &apos;Sibling&apos;),
       if (Year_Age__c &lt;= 18, if (  text(Family_Member_Type__c) = &apos;Patient&apos;, &apos;Graduated Patient&apos;, &apos;Graduated Sibling&apos;), &apos;Parent/Guardian&apos;))))</formula>
    <label>Reporting Family Member Type</label>
    <type>Text</type>
</CustomField>