force-app/main/default/objects/Contact/fields/Requests_No_Contact__c.field-meta.xml
<CustomField>
    <fullName>Requests_No_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For records who do not wish to receive all types of communication. This checkbox to be ticked before offboarding.</description>
    <inlineHelpText>For records who do not wish to receive all types of communication. This checkbox to be ticked before offboarding.</inlineHelpText>
    <label>Requests No Contact</label>
    <type>Checkbox</type>
</CustomField>