force-app/main/default/objects/Contact/fields/Requests_no_Marketing_Materials__c.field-meta.xml
<CustomField>
    <fullName>Requests_no_Marketing_Materials__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked if the contact does not want to receive information about fundraising, services and programs, or newsletters</description>
    <inlineHelpText>To be checked if the contact does not want to receive information about fundraising, services and programs, or newsletters</inlineHelpText>
    <label>Requests no Marketing Materials</label>
    <type>Checkbox</type>
</CustomField>