force-app/main/default/objects/Contact/fields/Requests_No_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Requests_No_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requests No Newsletter</label>
    <type>Checkbox</type>
</CustomField>