force-app/main/default/objects/Contact/fields/Returned_to_School__c.field-meta.xml
<CustomField>
    <fullName>Returned_to_School__c</fullName>
    <label>Returned to School?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>