force-app/main/default/objects/Contact/fields/RG_Count__c.field-meta.xml
<CustomField>
    <fullName>RG_Count__c</fullName>
    <label>RG Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>