force-app/main/default/objects/Contact/fields/RG_TM_signup__c.field-meta.xml
<CustomField>
    <fullName>RG_TM_signup__c</fullName>
    <formula>MarketingProfileTest__r.RG_TM_signup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RG_TM_signup</label>
    <type>Checkbox</type>
</CustomField>