force-app/main/default/objects/Contact/fields/RTS__c.field-meta.xml
<CustomField>
    <fullName>RTS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RTS = Return to Sender - used for Direct Mail Campaigns</description>
    <inlineHelpText>RTS = Return to Sender - used for Direct Mail Campaigns. A date the RTS was received should also be entered.</inlineHelpText>
    <label>RTS</label>
    <type>Checkbox</type>
</CustomField>