force-app/main/default/objects/Contact/fields/RTS_Date__c.field-meta.xml
<CustomField>
    <fullName>RTS_Date__c</fullName>
    <description>Date the returned mail was received.</description>
    <inlineHelpText>Date the returned mail was received.</inlineHelpText>
    <label>RTS Date</label>
    <type>Date</type>
</CustomField>