force-app/main/default/objects/Contact/fields/RTS_Reason__c.field-meta.xml
<CustomField>
    <fullName>RTS_Reason__c</fullName>
    <description>Why has this mailing address been marked as Return to Sender?</description>
    <label>RTS Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTS - Not at this address</fullName>
            </value>
            <value>
                <fullName>RTS - Invalid Mailing Address</fullName>
            </value>
            <value>
                <fullName>RTS - Deceased</fullName>
            </value>
            <value>
                <fullName>RTS - Unknown/No Further Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>