force-app/main/default/objects/Contact/fields/SA1_Landscape_Group__c.field-meta.xml
<CustomField>
    <fullName>SA1_Landscape_Group__c</fullName>
    <description>DCA Enrichment</description>
    <inlineHelpText>SA1 Classification: SA1s generally have a population of 200 to 800 persons, and an average population of about 400 persons. SA1s in remote and regional areas generally have smaller populations than those in urban areas.</inlineHelpText>
    <label>SA1 Landscape Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Collar Families</fullName>
            </value>
            <value>
                <fullName>City Seniors</fullName>
            </value>
            <value>
                <fullName>Farming Heartland</fullName>
            </value>
            <value>
                <fullName>Inner City Professionals</fullName>
            </value>
            <value>
                <fullName>New Arrivals</fullName>
            </value>
            <value>
                <fullName>Regional Centres</fullName>
            </value>
            <value>
                <fullName>Small Towns &amp; Beyond</fullName>
            </value>
            <value>
                <fullName>Student Communities</fullName>
            </value>
            <value>
                <fullName>Suburban Families</fullName>
            </value>
            <value>
                <fullName>Success Stories</fullName>
            </value>
            <value>
                <fullName>Unknown - Commercial Address</fullName>
            </value>
            <value>
                <fullName>Urban Change</fullName>
            </value>
            <value>
                <fullName>Urban Survivors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>