force-app/main/default/objects/Contact/fields/Schools_EmailPref__c.field-meta.xml
<CustomField>
    <fullName>Schools_EmailPref__c</fullName>
    <description>schools based email content email preferences</description>
    <label>Schools_EmailPref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Preference_Centre</valueSetName>
    </valueSet>
</CustomField>