force-app/main/default/objects/Contact/fields/Secondary_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to record a secondary owner for relationship managed fundraising contacts</description>
    <inlineHelpText>Used to record a secondary owner for relationship managed fundraising contacts</inlineHelpText>
    <label>Secondary Contact Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>