force-app/main/default/objects/Contact/fields/Segment_Code__c.field-meta.xml
<CustomField>
    <fullName>Segment_Code__c</fullName>
    <externalId>true</externalId>
    <label>Segment Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>