force-app/main/default/objects/Contact/fields/Share_images_for_promotional_purposes__c.field-meta.xml
<CustomField>
    <fullName>Share_images_for_promotional_purposes__c</fullName>
    <inlineHelpText>Whether we can share images of the family for CQ promotional purposes</inlineHelpText>
    <label>Share Images for Promotional Purposes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>