force-app/main/default/objects/Contact/fields/Share_images_with_corporate_partners__c.field-meta.xml
<CustomField>
    <fullName>Share_images_with_corporate_partners__c</fullName>
    <inlineHelpText>Whether we can share images of the family with our corporate partners</inlineHelpText>
    <label>Share images with corporate partners</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>