force-app/main/default/objects/Contact/fields/Share_Images_with_Participants__c.field-meta.xml
<CustomField>
    <fullName>Share_Images_with_Participants__c</fullName>
    <inlineHelpText>Whether you can share images with the participants who attended the same event.</inlineHelpText>
    <label>Share Images with Participants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>