force-app/main/default/objects/Contact/fields/Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>Shirt_Size__c</fullName>
    <label>Shirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kids 2</fullName>
            </value>
            <value>
                <fullName>Kids 4</fullName>
            </value>
            <value>
                <fullName>Kids 6</fullName>
            </value>
            <value>
                <fullName>Kids 8</fullName>
            </value>
            <value>
                <fullName>Kids 10</fullName>
            </value>
            <value>
                <fullName>Kids 12</fullName>
            </value>
            <value>
                <fullName>Kids 14</fullName>
            </value>
            <value>
                <fullName>Adult XS</fullName>
            </value>
            <value>
                <fullName>Adult S</fullName>
            </value>
            <value>
                <fullName>Adult M</fullName>
            </value>
            <value>
                <fullName>Adult L</fullName>
            </value>
            <value>
                <fullName>Adult XL</fullName>
            </value>
            <value>
                <fullName>Adult 2XL</fullName>
            </value>
            <value>
                <fullName>Adult 3XL</fullName>
            </value>
            <value>
                <fullName>Adult 4XL</fullName>
            </value>
            <value>
                <fullName>Adult 5XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>