force-app/main/default/objects/Contact/fields/Show_Annotation__c.field-meta.xml
<CustomField>
    <fullName>Show_Annotation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Annotation</label>
    <type>Checkbox</type>
</CustomField>