force-app/main/default/objects/Contact/fields/SMS_OTP__c.field-meta.xml
<CustomField>
    <fullName>SMS_OTP__c</fullName>
    <label>SMS OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>